# ChangeLog for app-sci/labplot
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-sci/labplot/ChangeLog,v 1.5 2004/07/03 22:10:59 carlo Exp $

  04 Jul 2004; Carsten Lohrke <carlo@gentoo.org> labplot-1.2.3.ebuild:
  QA: need-kde after R/DEPEND

  16 May 2004; Dominik Stadler <centic@gentoo.org> labplot-1.2.3.ebuild:
  Correct SRC_URI, should not contain "${HOMEPAGE}"

  02 May 2004; David Holm <dholm@gentoo.org> labplot-1.2.3.ebuild:
  Added to ~ppc.

*labplot-1.2.3 (01 May 2004)

  01 May 2004; Dominik Stadler <centic@gentoo.org> +labplot-1.2.3.ebuild:
  Add new ebuild, thanks to Carsten Lohrke <current@myrealbox.com> for the
  ebuild, see Bug 28216.
