@@ -1,4 +1,4 @@
-MD5 1c54ac82ea75ffe0defa490258177c38 labplot-1.2.3.ebuild 1151
-MD5 01f6cb0905bf79934438d772aae60ae0 ChangeLog 720
+MD5 ca70d945c7b308946db27461a8effff6 ChangeLog 947
+MD5 a3e5c589a39a58b1b81e7154c254fd41 labplot-1.3.0.ebuild 1152
 MD5 201497e376059503f8b7afd504d41023 metadata.xml 179
-MD5 f76492182dbca46b7eab8d0a752638ce files/digest-labplot-1.2.3 66
+MD5 b717f0448045aa171f74df43edcf4409 files/digest-labplot-1.3.0 66
