@@ -1,6 +1,11 @@
 # ChangeLog for app-sci/labplot
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-sci/labplot/ChangeLog,v 1.5 2004/07/03 22:10:59 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-sci/labplot/ChangeLog,v 1.6 2004/07/27 02:58:00 ribosome Exp $
+
+  26 Jul 2004; Olivier Fisette <ribosome@gentoo.org>
+  labplot-1.3.0.ebuild, labplot-1.2.3.ebuild:
+  New version, updated ebuild. I removed the old one because it had
+  a couple of issues, such as duplicated example files.
 
   04 Jul 2004; Carsten Lohrke <carlo@gentoo.org> labplot-1.2.3.ebuild:
   QA: need-kde after R/DEPEND
